[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/EnemySpawn.gd" type="Script" id=1]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1912.59, 4.80417, 0, 0, 0, 0, 1918.79, 1085.6 )
}

[node name="EnemySpawn" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="SpawnPathLocation" type="PathFollow2D" parent="SpawnPath"]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="WaveStateTimer" type="Timer" parent="."]
autostart = true
